add images and boxes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <header>
-    <h1 class="heading"> Let's Rock, Paper, Scissor! </h1>
+    <h1 class="heading"> Let's Rock, Paper, Scissors! </h1>
 </header>
 
     <!-- This is the main game area, the class names from the 'project scope' video have been used -->
@@ -35,12 +35,14 @@
         <button Fira-sans="Rock" data-choice="0" class="choice">Rock</button>
         <button Fira-sans="Paper" data-choice="1" class="choice">Paper</button>
         <button Fira-sans="Scissors" data-choice="2" class="choice">Scissors</button>
-
     </div>
 
     <div class="play-area">
-
-
+        <box class="box1">Testing</box> <box class="box2">Testing</box>
+        <!-- images copied from google - created by: Mary dela Cruz-->
+        <img src="/assets/images/rock.jpg" alt="rock-image">
+        <img src="/assets/images/paper.jpg" alt="paper-image">
+        <img src="/assets/images/scissors.jpg" alt="scissors-image">
     </div>
 
     <div class="score-area">
