--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
     <!-- This is the main game area, the class names from the 'project scope' video have been used -->
 
-    <!-- The end div for the game-area is placed after the score-area div. 
-    I'm hoping this will keep the three areas in one place -->
+    <!-- The end div for the game-area is placed after the score-area div. keeping the three areas in one place -->
     <div class="game-area">
 
         <h2>Let's play!</h2>
