--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
     <header>
         <h1 class="heading"> Let's Rock, Paper, Scissors! </h1>
+        <h2 class= "heading"> Win 5 Rounds to become the Champion</h2>
     </header>
 
     <!-- This is the main game area, the class names from the 'project scope' video have been used -->
@@ -32,9 +33,9 @@
         <h2>Let's play!</h2>
 
         <!-- images copied from google - created by: Mary dela Cruz-->
-        <img src="/assets/images/rock.jpeg" alt="rock-image">
-        <img src="/assets/images/paper.jpeg" alt="paper-image">
-        <img src="/assets/images/scissors.jpeg" alt="scissors-image">
+        <img src="/assets/images/rock" alt="rock-image">
+        <img src="/assets/images/paper" alt="paper-image">
+        <img src="/assets/images/scissors" alt="scissors-image">
 
         <div class="choice-area">
             <button aria-label="Rock" data-choice="0" class="choice">Rock</button>
@@ -47,13 +48,10 @@
                 <h3 class="scores">Your Score: <span id="player-score">0</span></h3>
                 <img id="player-image" src="assets/images/rps.jpeg" alt="Rock Paper Scissors Image">
             </div>
-
             <div class="computer">
                 <h3 class="scores">Computer Score: <span id="computer-score">0</span></h3>
                 <img id="computer-image" src="assets/images/rps.jpeg" alt="Rock Paper Scissors Image">
             </div>
-
-            <div class="score-area"></div>
 
         </div>
         <!-- script used as in Love Maths challenge -->
