add README.md file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <header>
         <h1 class="heading"> Let's Rock, Paper, Scissors! </h1>
-        <h2 class= "heading"> Win 5 Rounds to become the Champion</h2>
+        <h2 class= "sub-heading"> Win 5 Rounds to become the Champion</h2>
     </header>
 
     <!-- This is the main game area, the class names from the 'project scope' video have been used -->
