--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <img src="/assets/images/scissors" alt="scissors-image">
 
         <div class="choice-area">
-            <button aria-label="Rock" data-choice="0" class="choice">Rock</button>
-            <button aria-label="Paper" data-choice="1" class="choice">Paper</button>
-            <button aria-label="Scissors" data-choice="2" class="choice">Scissors</button>
+            <button aria-label="Rock" data-choice="0" class="btn">Rock</button>
+            <button aria-label="Paper" data-choice="1" class="btn">Paper</button>
+            <button aria-label="Scissors" data-choice="2" class="btn">Scissors</button>
         </div>
 
         <div class="play-area">
