further edit to js code

--- a/index.html
+++ b/index.html
@@ -33,24 +33,24 @@
         <h2>Let's play!</h2>
 
         <!-- images copied from google - created by: Mary dela Cruz-->
-        <img src="/assets/images/rock" alt="rock-image">
-        <img src="/assets/images/paper" alt="paper-image">
-        <img src="/assets/images/scissors" alt="scissors-image">
+        <img src="/assets/images/rock.jpg" alt="rock-image">
+        <img src="/assets/images/paper.jpg" alt="paper-image">
+        <img src="/assets/images/scissors.jpg" alt="scissors-image">
 
         <div class="choice-area">
-            <button aria-label="Rock" data-choice="0" class="btn">Rock</button>
-            <button aria-label="Paper" data-choice="1" class="btn">Paper</button>
-            <button aria-label="Scissors" data-choice="2" class="btn">Scissors</button>
+            <button aria-label="Rock" data-choice="0" class="btns">Rock</button>
+            <button aria-label="Paper" data-choice="1" class="btns">Paper</button>
+            <button aria-label="Scissors" data-choice="2" class="btns">Scissors</button>
         </div>
-
+        
         <div class="play-area">
             <div class="player">
                 <h3 class="scores">Your Score: <span id="player-score">0</span></h3>
-                <img id="player-image" src="assets/images/rps.jpeg" alt="Rock Paper Scissors Image">
+                <img id="player-image" src="assets/images/rps.jpg" alt="Rock Paper Scissors Image">
             </div>
             <div class="computer">
                 <h3 class="scores">Computer Score: <span id="computer-score">0</span></h3>
-                <img id="computer-image" src="assets/images/rps.jpeg" alt="Rock Paper Scissors Image">
+                <img id="computer-image" src="assets/images/rps.jpg" alt="Rock Paper Scissors Image">
             </div>
 
         </div>
