--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
         
         <div class="play-area">
             <div class="player">
-                <h3 class="Scores">Your Score: <span id="player-score">0</span></h3>
+                <h3 class="Scores">Your Score: <span id="player-score-display">0</span></h3>
                 <img id="player-image" src="assets/images/rps.jpg" alt="Rock Paper Scissors Image">
             </div>
             <div class="computer">
-                <h3 class="Scores">Computer Score: <span id="computer-score">0</span></h3>
+                <h3 class="Scores">Computer Score: <span id="computer-score-display">0</span></h3>
                 <img id="computer-image" src="assets/images/rps.jpg" alt="Rock Paper Scissors Image">
             </div>
 
