edit errors from w3c validator which now shows no errors or warnings

--- a/index.html
+++ b/index.html
@@ -55,13 +55,12 @@
         </div>
         <!-- script used as in Love Maths challenge -->
         <script src="assets/js/script.js"></script>
-
+    </div>
         <!--Basic footer including Rules-->
         <footer>
             <h2>How To Play</h2>
             <p>Rock beats Scissors - Paper beats Rock - Scissors beats Paper</p>
             <h3>Have Fun!</h3>
-
-</body>
 </footer>
+</body>
 </html>
